📱 💄 Fix settings on small screens

--- a/src/project/static/css/main.css
+++ b/src/project/static/css/main.css
@@ -1765,6 +1765,9 @@ select {
   width: -moz-max-content;
   width: max-content;
 }
+.w-screen {
+  width: 100vw;
+}
 .min-w-64 {
   min-width: 16rem;
 }
@@ -2193,6 +2196,9 @@ select {
 }
 .overflow-x-visible {
   overflow-x: visible;
+}
+.overflow-x-scroll {
+  overflow-x: scroll;
 }
 .scroll-smooth {
   scroll-behavior: smooth;
